--- a/styles/main.css
+++ b/styles/main.css
@@ -75,7 +75,7 @@ h1 {
 .card .wrapper {
     text-shadow: 2px 0px 4px #000000;
     background-color: #fff;
-    min-height: 440px;
+    min-height: 400px;
     position: relative;
     overflow: hidden;
     box-shadow: 0 19px 38px rgba(0, 0, 0, 0.3), 0 15px 12px rgba(0, 0, 0, 0.2);
@@ -108,6 +108,7 @@ h1 {
 }
 
 .card .title {
+    font-size: 24px;
     margin-top: 10px;
 }
 
